PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/VariableTypeDefined.pf
module VariableTypeDefined {

    data Car {
        name String
    }

    fun testSomething() : Int {
        i Car = ("Auto")
         
        return 1
    }
}