PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/FunctionExists.pf
module FunctionExists {



    fun testSomething() : Int {
        i Int = getInt()
         
        return i
    }
}